# mansil

./: .gitignore  .npmignore  .pubignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ansi_codes.json  go.mod  go.work  go.yaml  mansil.go  package-lock.json  package.json  pubspec.yaml  pyproject.toml  run_all_examples.sh  tsconfig.json
.github/workflows/: release.yml
cmd/: go.mod  main.go
cmd/internal/generator/: generator.go
cmd/internal/version/: version.go
cmd/mansil/: main.go
example/mansil_dart_example/: pubspec.yaml
example/mansil_go_example/: go.mod  main.go
example/mansil_python_example/: pyproject.toml
example/mansil_python_example/mansil_python_example/: __init__.py
example/mansil_rust_example/: Cargo.toml
example/mansil_rust_example/src/: main.rs
example/mansil_ts_example/: package-lock.json  package.json
example/mansil_ts_example/src/: index.ts
internal/generator/: generator.go  types.go
lib/: dart_tmp.dart  mansil.dart
mansil/: __init__.py
npm/: index.ts
src/: lib.rs
