[project]
name = "mansil"
version = "0.1.1"
description = "Multi-language ANSI codes library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vieolo B.V." }
]
keywords = ["ansi", "escape-codes", "terminal", "colors"]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["example"]

[tool.hatch.build.targets.wheel]
packages = ["mansil"]

